Added: Home page and other stuff.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,8 @@
 {
 	"dart.analysisServerFolding": true,
-	"cmake.configureOnOpen": false
+	"cmake.configureOnOpen": false,
+	"cSpell.words": [
+		"Hakeeb",
+		"Olatunde"
+	]
 }
