--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: somerest
-description: A new Flutter project.
+description: SOMEREST commenced business operation in the year 2002 as an ICT and project management firm and later expanded to cover recruitment/outsourcing, branding and event planning with an emphasis on business support services consultancy. Over the past years, we have consolidated the business by providing excellent services to our clients. At SOMEREST we share ideas, knowledge, and experience to deliver outstanding results to our clients. We also invest heavily in staff training and ensuring our team is equipped with specialist skills necessary to perform to the highest possible standard. SOMEREST is committed to providing tailored end-to-end services to its clients resulting in mutually beneficial outcomes without compromising on the overall quality of our services and our partnership with our clients to ensure we understand their goals and guidelines. We hold the requisite licenses required by law to offer our services and management and staff are qualified to discharge their responsibilities.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -31,7 +31,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-    
+  google_maps_flutter: ^2.1.1
 
 
   # The following adds the Cupertino Icons font to your application.
