--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
     sdk: flutter
   google_maps_flutter: ^2.1.1
   flash: ^1.3.1
+  group_button: ^3.3.1
 
 
   # The following adds the Cupertino Icons font to your application.
