--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   shared_preferences: 
   http: ^0.13.5
+  flutter_svg: ^1.1.6
 
 dev_dependencies:
   flutter_test:
