--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/fonts/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -94,3 +95,11 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+  fonts:
+    - family: SmartphoneColorPro
+      fonts: 
+        - asset: assets/fonts/SmartphoneColorPro.ttf
+        
+    - family: SocialCircledIcons
+      fonts: 
+        - asset: assets/fonts/SocialMediaCircled.otf
