--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -106,6 +106,12 @@ flutter:
 
     - family: Raleway
       fonts:
-        - asset: assets/fonts/Raleway.ttf
-        - asset: assets/fonts/RalewayItalic.ttf
-          style: italic
+        - asset: assets/fonts/Raleway-Regular.ttf
+        - asset: assets/fonts/Raleway-Semibold.ttf
+          weight: 600
+        - asset: assets/fonts/Raleway-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/Raleway-Extrabold.ttf
+          weight: 800
+        - asset: assets/fonts/Raleway-Black.ttf
+          weight: 900
